Fixed html appearing in the excerpt message. Fixed cookie not showing when in "forever" pending state. Output the correct verificationFailure message to include the same styling as the design. Refactored the main JS file to use more helper functions and a consistent naming from "display" to "show".

--- a/assets/scss/messages/coil.scss
+++ b/assets/scss/messages/coil.scss
@@ -6,6 +6,7 @@ body.coil-gate-all.coil-extension-not-found.show-fw-message,
 body.coil-missing-id.coil-extension-not-found.show-fw-message,
 body.monetization-not-initialized.coil-gate-all.show-fw-message,
 body.coil-gate-all.coil-extension-not-found.show-excerpt-message,
+body.monetization-not-initialized.coil-gate-all.show-excerpt-message,
 body.monetization-not-initialized.coil-missing-id.show-fw-message {
 
 	.coil-message-container {
@@ -111,6 +112,7 @@ body.monetization-not-initialized.coil-missing-id.show-fw-message {
 }
 
 // Scenario 2
+body.monetization-not-initialized.coil-gate-all.show-excerpt-message,
 body.coil-gate-all.coil-extension-not-found.show-excerpt-message {
 
 	.coil-message-container {
